test-output/src/tests/snapshots/test_output__tests__echo__echo_bool.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub fn main() {
  echo True
  echo False
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
True
[90msrc/main.gleam:6[39m
False
