test-output/src/tests/snapshots/test_output__tests__echo__echo_dict.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

import gleam/dict

pub fn main() {
  echo dict.new()
  echo dict.from_list([#(1, "hello"), #(2, "world!")])
}


--- gleam run output ----------------
[90msrc/main.gleam:7[39m
dict.from_list([])
[90msrc/main.gleam:8[39m
dict.from_list([#(1, "hello"), #(2, "world!")])
