test-output/src/tests/snapshots/test_output__tests__echo__echo_int.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub fn main() {
  echo 1
  echo 2
  echo 100_000
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
1
[90msrc/main.gleam:6[39m
2
[90msrc/main.gleam:7[39m
100000
