test-output/src/tests/snapshots/test_output__tests__echo__echo_nil.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2018 The Gleam contributors

pub fn main() {
  echo Nil
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
Nil
