test-output/src/tests/snapshots/test_output__tests__echo__echo_string.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub fn main() {
  echo "hello world"
  echo "multiline
string"
  echo "string with\t\r\nescaped chars"
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
"hello world"
[90msrc/main.gleam:6[39m
"multiline\nstring"
[90msrc/main.gleam:8[39m
"string with\t\r\nescaped chars"
