test-output/src/tests/snapshots/test_output__tests__echo__echo_tuple.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub fn main() {
  echo #()
  echo #(True, 1, "hello")
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
#()
[90msrc/main.gleam:6[39m
#(True, 1, "hello")
