test-output/src/tests/snapshots/test_output__tests__echo__echo_with_message.snap
---
source: test-output/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2025 The Gleam contributors

pub fn main() {
  let message = "message"

  echo 1 as "message1"

  1
  |> echo as { message <> "2" }
  |> fn(n) { n + 1 }
  |> echo as "message3"
}


--- gleam run output ----------------
[90msrc/main.gleam:7[39m message1
1
[90msrc/main.gleam:10[39m message2
1
[90msrc/main.gleam:12[39m message3
2
